fix text and img overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,25 +125,31 @@ main {
 
 /* Experiences Section */
 
-#experiences {
+/* Container holding the image and the text */
+#experiences{
   display: flex;
   flex-wrap: wrap;
-  gap: 5px;
+  gap:5px;
 }
-
-#experiences div {
-  height: 100px;
-  width: 100%;
+.container {
   position: relative;
+  text-align: center;
+  width: 100%;
+  height: 200px;
+  /* color: white; */
 }
-
-.my-img{
+img{
+  opacity: 0.7;
   height: 100%;
   width: 100%;
-  object-fit: cover;
-  opacity: 0.7;
 }
-
+/* Centered text */
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
 /* Footer */
 footer {
